Fixed BUG#3583: query cache doesn't work for stored procedures.